<html>
<head><style type="text/css">body {font-size: smaller;}</style></head>
<body>
  <b>2.6.4</b>
  <ul><li>French translation updated. Thanks @Tubix!</li></ul>
  <b>2.6.3</b>
  <ul>
    <li>Adds a menu option to check if a puzzle is solvable when editing or adding a puzzle. Thanks
    @ssteve3424!</li>
  </ul>
  <b>2.6.2</b>
  <ul>
    <li>Solved import crash!</li>
    <li>Puzzle solver always work even if you made a mistake.</li>
    <li>Added a new option to get hints.</li>
    <li>Thanks @ssteve3424 for solver and hints!</li>
  </ul>
  <b>2.6.1</b>
  <ul><li>New adaptive icon!</li></ul>
  <b>2.6.0</b>
  <ul>
    <li>Added permission checks for reading/writing external storage.</li>
    <li>Added puzzle solver.</li>
    <li>Thanks @ssteve3424 for this contributions!</li>
  </ul>
  <b>2.5.2</b>
  <ul><li>Added chinese language. Thanks @kevinshq!</li></ul>
  <b>2.5.1</b>
  <ul>
    <li>Expose the settings menu everywhere. Thanks @bebehei!</li>
    <li>Updated german translation. Thanks @Stunkymonkey and @bebehei!</li>
  </ul>
  <b>2.5.0</b>
  <ul><li>Added new themes and custom theme settings. Thanks @spimanov!</li></ul>
  <b>2.4.4</b>
  <ul><li>Fixed export issue. Thanks @spimanov!</li></ul>
  <b>2.4.3</b>
  <ul><li>Added portuguese language. Thanks Joaquim Pedroto Costa!</li></ul>
  <b>2.4.2</b>
  <ul><li>Added brazilian portuguese language. Thanks @prschopf!</li></ul>
  <b>2.4.1</b>
  <ul><li>Minor bug importing version 1 notes fixed.</li></ul>
  <b>2.4.0</b>
  <ul>
    <li>Checkpoint issue - Now app saves undo history for games which are in "Playing" status. As
    well as checkpoints.</li>
    <li>After performing an undo, the previously edited cell will be selected.</li>
    <li>New option has been added - Bidirectional selection for Single Number input panel. Any
    selection of a cell will automatically select a corresponding number of the input panel and vice