@@ -8,8 +8,8 @@ android {
         applicationId "org.moire.opensudoku"
         minSdkVersion 14
         targetSdkVersion 28
-        versionCode 20191025
-        versionName "2.6.4"
+        versionCode 20200115
+        versionName "2.7.0"
     }
 
     buildTypes {
